--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: Anindita Basu
+name: TyrsWebMaster
 markdown: kramdown
-baseurl: /jekyll-github-starter-pack
+baseurl: /tyrsnorseman.com_012025
